home-automation/zwavejs/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zwavejs
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: zwavejs
  template:
    metadata:
      labels:
        name: zwavejs
    spec:
      containers:
        - name: zwavejs
          image: zwavejs/zwave-js-ui:11.19.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 12
            httpGet:
              httpHeaders:
                - name: Accept
                  value: text/plain
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          ports:
            - containerPort: 8091
              name: http
              protocol: TCP
            - containerPort: 3000
              name: ws
              protocol: TCP
          resources:
            requests:
              cpu: '1'
              memory: 500Mi
          volumeMounts:
            - mountPath: /usr/src/app/store
              name: store
      volumes:
        - name: store
          persistentVolumeClaim:
            claimName: zwavejs
